adding urlquery function to links to encode ids that contained "?", for ex. mansio-?

--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -36,19 +36,18 @@
     </ul>
 
     <p><strong>Broader Concept:</strong></p>
-    <a href="/site-types/{{ trim (replace .broaderSiteType "https://dkglab.github.io/ns/for/site-type/" "" -1) }}.html">
+    <a href="/site-types/{{ urlquery (trim (replace .broaderSiteType "https://dkglab.github.io/ns/for/site-type/" "" -1)) }}.html">
       {{ trim (replace .broaderSiteType "https://dkglab.github.io/ns/for/site-type/" "" -1) }}
-      <!--add variable for broader site type labels to query + template -->
     </a>
+      <!--add variable for broader site type labels to query + template -->
     <p><strong>Narrower Concept:</strong></p>
     <ul>
       {{ $labels := split .narrowerSiteTypeLabels "," }}
       {{ range $index, $narrower := split .narrowerSiteTypes "," }}
       <li>
-      <a href="/site-types/{{ trim (replace $narrower "https://dkglab.github.io/ns/for/site-type/" "" -1) }}.html">
-
-        {{ index $labels $index }}
-      </a>
+        <a href="/site-types/{{ urlquery (trim (replace $narrower "https://dkglab.github.io/ns/for/site-type/" "" -1)) }}.html">
+          {{ index $labels $index }}
+        </a>
       </li>
       {{ end }}
     </ul>
