Implement showing analytic region on the map

--- a/snowman/templates/analytic-region.html
+++ b/snowman/templates/analytic-region.html
@@ -5,6 +5,7 @@
 {{ define "content" -}}
 <header>
   <h1>{{ .region_name }}</h1>
+  <p><a href="/map?analytic-region={{ .region_name }}">See {{ .region_name }} on the map</a></p>
 </header>
 <div>
 </div>
